oxiplate-derive/tests/broken/derive/inline-name-value.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate_inline = "hello"]
struct Data;

fn main() {
    print!("{}", Data);
}
